web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/inner-parens-2/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,6)
1|(a, (b)) => 42
 |    ^
